samples/_failures_safe/1761045275_a9ba19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7c289ae.c: In function ‘main’:
./samples/SAFE/__tmp_b7c289ae.c:161:5: error: expected expression at end of input
  161 |     if (memcmp(input_data, decompressed.data, input_size) !=
      |     ^~
./samples/SAFE/__tmp_b7c289ae.c:161:5: error: expected declaration or statement at end of input
